@@ -1,3 +1,9 @@
+2003-10-10  Not Zed  <NotZed@Ximian.com>
+
+	* filter-folder.c (folder_selected): change for
+	emfolderselectionbutton fixes.
+	(get_widget): same.
+
 2003-09-29  Ettore Perazzoli  <ettore@ximian.com>
 
 	* filter-folder.c (get_widget): Use an EMFolderSelectionButton.
